# ghrm-hugo

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
ghrm/: __init__.py  assets.py  bench.py  common.py  preview.py  stage.py
lua/ghrm/: init.lua
test/: basics.md  diagrams.md  invalids.md
theme/gh-readme/: theme.toml
theme/gh-readme/assets/css/: admonitions.css  chroma.css  features.css  github-markdown.css  page.css
theme/gh-readme/layouts/_default/: baseof.html  home.html  list.html  single.html
theme/gh-readme/layouts/_markup/: render-blockquote.html  render-codeblock-geojson.html  render-codeblock-math.html  render-codeblock-mermaid.html  render-codeblock-stl.html  render-codeblock-topojson.html  render-image.html  render-link.html
theme/gh-readme/layouts/partials/: content.html  explorer.html  nav.html  resolve.html
theme/gh-readme/static/js/: preview.js
