[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ghrm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "markdown-it-py>=3.0.0,<4",
  "mdit-py-hugo>=0.3.1,<0.4",
]

[project.scripts]
ghrm = "ghrm.preview:main"

[tool.setuptools]
packages = ["ghrm"]
